implementing ags_midi_ump_util.[ch]

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@ ags (5.5.1)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* TODO:JK: implemented ags_midi_ump_util.[ch]
 	* implemented ags_solver_matrix_to_string()
+	* implemented ags_time_nanosleep()
 	* TODO:JK: implemented ags_solver_matrix_to_symbolic_string()
 	* TODO:JK: implemented ags_solver_matrix_solve_default()
 	* TODO:JK: implemented ags_solver_matrix_solve_symbolic()
