--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@ with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 A copy of the license is included in the section entitled "GNU
 Free Documentation License".
 
-* TODO:JK: improved AgsResampleUtil don't discard quality for gint32, gint64, gdouble and AgsComplex
+* TODO:JK: implemented ags_midi_ump_util.[ch]
 * TODO:JK: improve ags_midi_buffer_util.c return value
 * TODO:JK: fix ags_vst_iprocess_context.h states and flags
 * TODO:JK: rename AgsAudioThreadFlags
@@ -32,7 +32,6 @@ Free Documentation License".
 * TODO:JK: added unit-tests
 * TODO:JK: implement ::seek() of AgsMidiParser and AgsOscParser
 * TODO:JK: implement ::seek() of AgsMidiBuilder and AgsOscBuilder
-* TODO:JK: implemented resample AgsAudioSignal on presets modified
 * TODO:JK: removed ags_id_generator.[ch]
 * TODO:JK: improved ags_audio_signal_feed() reduce over-head
 * TODO:JK: implemented AgsScaleArea properties
