--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (5.5.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed gtk-doc
+
 ags (5.5.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
