--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 ags (5.5.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: implemented ags_midi_ump_util.[ch]
+	* implemented ags_midi_ump_util.[ch]
+	* added ags_midi_ump_util_test.c
 
 ags (5.5.3)
 
