--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
-ags (5.5.5)
+ags (6.0.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* fixed ags_midi_ump_util.[ch]
+	* breaking ABI of ags_midi_util.h
+	* breaking ABI of renamed ags_midi_buffer_util.h to ags_midi_smf_util.h
+	* breaking ABI of ags_osc_buffer_util.h
+	* TODO:JK: fixed ags_midi_ump_util.[ch]
 	* added missing tests to ags_midi_ump_util_test.c
 
 ags (5.5.4)
