--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.0.4)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: improved presets
+
 ags (6.0.3)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
