--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ags (6.0.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: improved presets
+	* improved presets of SF2 and SFZ synth util
 
 ags (6.0.3)
 
