more mixer pads

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ags (6.0.7)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* improved sndfile resampling
+	* improved libsndfile resampling
 	* minor improvements
 
 ags (6.0.6)
