--- a/README
+++ b/README
@@ -80,9 +80,9 @@ To build on windows you need gnulib. First import some functions using gnulib
 then compile with msys2.
 
 git clone git://git.sv.gnu.org/gnulib.git
-./gnulib/gnulib-tool --import langinfo regex signal-h sigaction strings sys_types memcpy
+./gnulib/gnulib-tool --import langinfo regex signal-h sigaction strings sys_types memcpy lib-msvc-compat
 autoreconf -fi
-./configure --prefix=/mingw64 --disable-rt --enable-w32api --disable-alsa --enable-alsa-compat --disable-pulse --disable-jack --enable-wasapi --disable-x11 --with-poppler
+./configure --prefix=/mingw64 --disable-rt --enable-threads=windows --enable-w32api --disable-alsa --enable-alsa-compat --disable-pulse --disable-jack --enable-wasapi --disable-x11 --with-poppler
 make -j8
 make install
 
