--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.0.10)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed unit integration tests
+
 ags (6.0.9)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
