--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,10 @@
 ags (6.1.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* implemented note 256th in alsa backend
+	* TODO:JK: implement note 256th
+	* TODO:JK: implement note 256th
+	* TODO:JK: implement note 256th
 	* TODO:JK: implement note 256th
 
 ags (6.0.10)
