--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@ ags (6.1.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented note 256th in alsa backend
-	* TODO:JK: implement note 256th in audio-unit backend
-	* TODO:JK: implement note 256th
+	* implemented note 256th in audio-unit backend
+	* implemented note 256th CoreAudio backend
 	* TODO:JK: implement note 256th
 	* TODO:JK: implement note 256th
 
