--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+ags (6.0.11)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed double free in ags_fx_vst3_audio.c
+	* fixed memory leak in ags_fx_lv2_audio.c
+	* fixed memory leak in ags_fx_vst3_audio.c
+	* fixed memory leak in ags_fx_dssi_audio.c
+
 ags (6.0.10)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
