--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@ ags (6.1.0)
 	* implemented note 256th in audio-unit backend
 	* implemented note 256th CoreAudio backend
 	* implemented note 256th gstreamer backend
+	* implemented note 256th jack
+	* TODO:JK: implement note 256th
 	* TODO:JK: implement note 256th
 
 ags (6.0.10)
