--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ ags (6.0.11)
 	* fixed memory leak in ags_fx_lv2_audio.c
 	* fixed memory leak in ags_fx_vst3_audio.c
 	* fixed memory leak in ags_fx_dssi_audio.c
+	* minor improvements
 
 ags (6.0.10)
 
