--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.0.12)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed resampling in ags-fx-buffer
+
 ags (6.0.11)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
