--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.0.13)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* reverted corrupted free
+
 ags (6.0.12)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
