--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 A copy of the license is included in the section entitled "GNU
 Free Documentation License".
 
+* TODO:JK: refactor AgsRecallContainer
 * TODO:JK: improve ags_midi_smf_util.c return value
 * TODO:JK: refactored AgsSimpleFile improved reading XML
 * TODO:JK: refactored LV2 parser
