--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 ags (6.2.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: implemented ags_soundcard_get_note_256th_attack()
+	* implemented ags_soundcard_get_note_256th_offset()
+	* implemented ags_soundcard_get_note_256th_attack()
+	* implemented ags_soundcard_get_note_256th_attack_at_position()
+	* TODO:JK: refactored AgsAlsaDevout, AgsAlsaDevin, AgsOssDevout, AgsOssDevin, AgsPulseDevout, AgsPulseDevin, AgsJackDevout, AgsJackDevin, AgsCoreAudioDevout, AgsCoreAudioDevin, AgsWasapiDevout and AgsWasapiDevin
 	* fixed missing include
 
 ags (6.2.1)
