--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+ags (6.3.0)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: implemented ags_file_util.[ch] file read/write functions for C types
+	* TODO:JK: refactored AgsSimpleFile
+	* fixed potential SIGSEGV with destroyed machine in AgsCompositeEditor
+
 ags (6.2.5)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
