refactored ALSA and OSSv4 16th pulse related

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,16 @@
 ags (6.3.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: implemented ags_soundcard_get_note_256th_attack_of_16th_pulse()
 	* implemented ags_file_util.[ch] file read/write functions for C types
 	* implemented AgsRecallResetStaging
+	* refactored AgsAlsaDevout and AgsAlsaDevin
+	* refactored AgsOssDevout and AgsOssDevin
+	* TODO:JK: refactored AgsPulseDevout and AgsPulseDevin
+	* TODO:JK: refactored AgsJackDevout and AgsJackDevin
+	* TODO:JK: refactored AgsCoreAudioDevout and AgsCoreAudioDevin
+	* TODO:JK: refactored AgsWasapiDevout and AgsWasapiDevin
+	* TODO:JK: refactored AgsGstreamerDevout and AgsGstreamerDevin
 	* TODO:JK: refactored AgsSimpleFile
 	* fixed potential SIGSEGV with destroyed machine in AgsCompositeEditor
 	* fixed potential SIGSEGV with AgsSF2Synth and AgsSFZSynth wah-wah callbacks
