--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-Copyright (C) 2005-2023 Joël Krähemann
+Copyright (C) 2005-2024 Joël Krähemann
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.3
@@ -7,6 +7,7 @@ with no Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
 A copy of the license is included in the section entitled "GNU
 Free Documentation License".
 
+* TODO:JK: refactor AgsSimpleFile
 * TODO:JK: refactor AgsRecallContainer
 * TODO:JK: improve ags_midi_smf_util.c return value
 * TODO:JK: refactored AgsSimpleFile improved reading XML
