--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ags (6.3.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: implemented AgsRegexUtil
+	* implemented AgsRegexUtil
 	* deprecated ags_regexec() and ags_regcomp()
 	* added missing menu items of menubar
 	* improved ags_file_util.c to use regexec and regcomp
