refactored AgsTurtle and AgsLv2TurtleScanner to use AgsRegexUtil

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,10 @@ ags (6.3.2)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented AgsRegexUtil
 	* deprecated ags_regexec() and ags_regcomp()
+	* refactored AgsTurtle to use AgsRegexUtil
+	* TODO:JK: refactored AgsFileUtil to use AgsRegexUtil
+	* refactored AgsLv2TurtleScanner to use AgsRegexUtil
+	* implemented AgsRegexUtil
 	* added missing menu items of menubar
 	* improved ags_file_util.c to use regexec and regcomp
 
