--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.3.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed missing type casts
+
 ags (6.3.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
