--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,12 @@ ags (6.4.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* refactored AgsNavigation to make use of AgsUiProvider::update-ui() event
-	* TODO:JK: refactored AgsMixerInputLine to make use of AgsUiProvider::update-ui() event
-	* TODO:JK: refactored AgsDrumInputLine to make use of AgsUiProvider::update-ui() event
+	* refactored AgsLine to make use of AgsUiProvider::update-ui() event
+	* refactored AgsMixerInputLine to make use of AgsUiProvider::update-ui() event
+	* refactored AgsDrumInputLine to make use of AgsUiProvider::update-ui() event
+	* refactored AgsCellPattern to make use of AgsUiProvider::update-ui() event
+	* refactored AgsPatternBox to make use of AgsUiProvider::update-ui() event
+	* refactored AgsAudiorec to make use of AgsUiProvider::update-ui() event
 
 ags (6.3.5)
 
