--- a/ChangeLog
+++ b/ChangeLog
@@ -3,11 +3,14 @@ ags (6.4.0)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* refactored AgsNavigation to make use of AgsUiProvider::update-ui() event
 	* refactored AgsLine to make use of AgsUiProvider::update-ui() event
+	* refactored AgsEffectLine to make use of AgsUiProvider::update-ui() event
+	* refactored AgsEffectBulk to make use of AgsUiProvider::update-ui() event
 	* refactored AgsMixerInputLine to make use of AgsUiProvider::update-ui() event
 	* refactored AgsDrumInputLine to make use of AgsUiProvider::update-ui() event
 	* refactored AgsCellPattern to make use of AgsUiProvider::update-ui() event
 	* refactored AgsPatternBox to make use of AgsUiProvider::update-ui() event
 	* refactored AgsAudiorec to make use of AgsUiProvider::update-ui() event
+	* refactored AgsSpectrometer to make use of AgsUiProvider::update-ui() event
 
 ags (6.3.5)
 
