--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.4.2)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* refactored AgsEnvelopeEditor to use AgsDial
+
 ags (6.4.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
