fixed GIConv pointer

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ ags (6.5.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* updated screenshots of user manual
+	* minor improvements
 
 ags (6.5.0)
 
