--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,7 @@
 ags (6.6.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: implemented AgsFileDialog
+	* TODO:JK: implemented AgsFileDialog and AgsFileWidget
 	* TODO:JK: implemented --enable-macos-sandbox configure switch
 
 ags (6.5.2)
