improved and moved AgsInputDialog

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,8 @@ ags (6.6.0)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* TODO:JK: implemented AgsFileDialog and AgsFileWidget
 	* implemented AgsIconLink
-	* TODO:JK: implemented --enable-macos-sandbox configure switch
+	* moved ags/app/ags_input_dialog.[ch] to ags/widget/
+	* added --enable-macos-sandbox configure switch
 
 ags (6.5.2)
 
