--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@ ags (6.6.0)
 	* implemented AgsFileDialog and AgsFileWidget
 	* implemented AgsIconLink
 	* moved ags/app/ags_input_dialog.[ch] to ags/widget/
+	* refactored ags_app_action_util.c to use AgsFileDialog
 	* added --enable-macos-sandbox configure switch
 
 ags (6.5.2)
