--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ ags (6.6.0)
 	* moved ags/app/ags_input_dialog.[ch] to ags/widget/
 	* refactored ags_app_action_util.c to use AgsFileDialog
 	* added --enable-macos-sandbox configure switch
+	* added ags_endian_test.c
+	* added ags_regex_util_test.c
 
 ags (6.5.2)
 
