--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ ags (6.6.0)
 	* added --enable-macos-sandbox configure switch
 	* added ags_endian_test.c
 	* added ags_regex_util_test.c
+	* added ags_string_util_test.c
 
 ags (6.5.2)
 
