--- a/ChangeLog
+++ b/ChangeLog
@@ -3,8 +3,13 @@ ags (6.6.0)
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented AgsFileDialog and AgsFileWidget
 	* implemented AgsIconLink
+	* renamed ags/app/ags_pcm_file_chooser_dialog.[ch] to ags_pcm_file_dialog.[ch]
 	* moved ags/app/ags_input_dialog.[ch] to ags/widget/
+	* refactored AgsPCMFileDialog to use AgsFileWidget
 	* refactored ags_app_action_util.c to use AgsFileDialog
+	* refactored ags_drum.c to use AgsPCMFileDialog
+	* refactored ags_drum_input_pad.c to use AgsPCMFileDialog
+	* refactored ags_ffplayer.c to use AgsFileDialog
 	* added --enable-macos-sandbox configure switch
 	* added ags_endian_test.c
 	* added ags_regex_util_test.c
