--- a/ChangeLog
+++ b/ChangeLog
@@ -9,7 +9,7 @@ ags (6.6.0)
 	* refactored AgsPCMFileDialog to use AgsFileWidget
 	* refactored AgsExportSoundcard to use AgsPCMFileDialog
 	* refactored AgsMidiExportWizard to use AgsFileWidget
-	* TODO:JK: refactored AgsMidiImportWizard to use AgsFileWidget
+	* refactored AgsMidiImportWizard to use AgsFileWidget
 	* refactored AgsLinkEditor to use AgsPCMFileDialog
 	* refactored AgsDrum to use AgsPCMFileDialog
 	* refactored AgsDrumInputPad to use AgsPCMFileDialog
