--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.7.1)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* TODO:JK: implemented AgsSolverPath
+
 ags (6.7.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
