--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ ags (6.7.1)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
 	* implemented AgsSolverPath
+	* fixed notation edit scrollbars
 
 ags (6.7.0)
 
