--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+ags (6.7.3)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* fixed memory-leak with AgsRecall and AgsRecallContainer while stop playback
+
 ags (6.7.2)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
