sandbox related changes and respect XDG environment variables

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,8 @@
 ags (6.8.0)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* TODO:JK: added --enable-snap-sandbox configure switch
-	* TODO:JK: added --enable-flatpak-sandbox configure switch
+	* added --enable-snap-sandbox configure switch
+	* added --enable-flatpak-sandbox configure switch
 
 ags (6.7.4)
 
